--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 streamlit~=1.24.1
-requests~=2.31.0
+requests~=2.28.2
 vertexai~=0.0.1
 langchain~=0.0.190
 pypdf2~=2.11.1
@@ -7,3 +7,6 @@ pandas~=2.0.3
 numpy~=1.25.1
 matplotlib~=3.7.2
 ipython~=8.14.0
+openai~=0.27.8
+gtts~=2.3.1
+pydub~=0.25.1
